--- a/sample.env
+++ b/sample.env
@@ -1,9 +1,9 @@
-API_ID=24154075
-API_HASH=9c44d4c6ff6e6e3c47c89ef170b1f6f2
+API_ID=27883552
+API_HASH=03e8a15853d2aa580c52aea314d26711
 BOT_TOKEN=
 LOG_GROUP_ID=-1002744466686
-OWNER_ID=2124032894
-SUPPORT_CHANNEL=https://t.me/watermoonsex
+OWNER_ID=1131410129
+SUPPORT_CHANNEL=https://t.me/skandalanet 
 SUPPORT_GROUP=https://t.me/mksyasayang
-START_IMG_URL=https://files.catbox.moe/vfbq3n.jpg
+START_IMG_URL=https://files.catbox.moe/lxtxhr.jpg
 STRING_SESSION=
