--- a/sample.env
+++ b/sample.env
@@ -1,6 +1,7 @@
 API_ID=27883552
 API_HASH=03e8a15853d2aa580c52aea314d26711
 BOT_TOKEN=
+MONGO_DB_URI=
 LOG_GROUP_ID=-1002744466686
 OWNER_ID=1131410129
 SUPPORT_CHANNEL=https://t.me/skandalanet 
