--- a/sample.env
+++ b/sample.env
@@ -1,5 +1,5 @@
-API_ID=27883552
-API_HASH=03e8a15853d2aa580c52aea314d26711
+API_ID=
+API_HASH=
 BOT_TOKEN=
 MONGO_DB_URI=
 LOG_GROUP_ID=-1002744466686
