--- a/requirements.txt
+++ b/requirements.txt
@@ -26,6 +26,21 @@ spotipy
 tgcrypto
 urllib3
 httpx[http2]==0.27.0
+apscheduler
+bing-image-urls
+gTTS
+googlesearch-python
+python-telegram-bot
+httpx[http2]
+pyfiglet
+requests
+lexica-api
+SafoneAPI
+nekos.py
+telegraph
+uuid
+git+https://github.com/TheChampu/TheAPI
+git+https://github.com/TheChampu/ChampuAPI
 git+https://github.com/yt-dlp/yt-dlp@master
 SafoneAPI
 numpy
