--- a/sample.env
+++ b/sample.env
@@ -6,5 +6,5 @@ LOG_GROUP_ID=-1002744466686
 OWNER_ID=1131410129
 SUPPORT_CHANNEL=https://t.me/skandalanet 
 SUPPORT_GROUP=https://t.me/mksyasayang
-START_IMG_URL=https://files.catbox.moe/lxtxhr.jpg
+START_IMG_URL=
 STRING_SESSION=
